2024-10-21T12:14:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11439863442 # 601
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-21
* notice: last 14d: unq all: 12 27
* notice: prev accum: outdated-unq outdated-all / unq all: 847 4645 / 858 4671
* notice: next accum: outdated-unq outdated-all / unq all: 847 4645 / 859 4672
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-21]

2024-10-21T00:38:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11431056045 # 600
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-21
* notice: last 14d: unq all: 11 26
* notice: prev accum: outdated-unq outdated-all / unq all: 847 4645 / 857 4670
* notice: next accum: outdated-unq outdated-all / unq all: 847 4645 / 858 4671
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-20]

2024-10-20T00:40:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11421990757 # 598
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-20
* notice: last 14d: unq all: 10 25
* notice: prev accum: outdated-unq outdated-all / unq all: 845 4641 / 856 4668
* notice: next accum: outdated-unq outdated-all / unq all: 847 4645 / 857 4670
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-10-05] / [2024-10-19]

2024-10-19T00:36:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11412950438 # 596