@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-21T12:14:21Z",
-  "count_outdated" : 4645,
-  "uniques_outdated" : 847,
+  "timestamp" : "2024-10-22T00:37:26Z",
+  "count_outdated" : 4646,
+  "uniques_outdated" : 848,
   "count" : 4672,
   "uniques" : 859,
   "views" : [
-    {
-      "timestamp": "2024-10-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-08T00:00:00Z",
       "count": 1,
