@@ -1,12 +1,7 @@
 {
-  "count": 27,
-  "uniques": 12,
+  "count": 26,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2024-10-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-10-08T00:00:00Z",
       "count": 1,
