@@ -1,3 +1,12 @@
+2024-10-22T00:37:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11451004229 # 602
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-22
+* notice: last 14d: unq all: 11 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 847 4645 / 859 4672
+* notice: next accum: outdated-unq outdated-all / unq all: 848 4646 / 859 4672
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-10-07] / []
+
 2024-10-21T12:14:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11439863442 # 601
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-21
